--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,130 @@
+argcomplete==3.6.2
+asgiref==3.8.1
+attrs==25.1.0
+Beaker==1.12.1
+beautifulsoup4==4.13.4
 blinker==1.9.0
+blivet==3.12.1
+blivet-gui==2.6.0
+boto3==1.38.27
+botocore==1.38.27
+Brlapi==0.8.6
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.2.1
+colorama==0.4.6
+contourpy==1.3.1
+crypt_r==3.13.1
+cryptography==41.0.7
+cupshelpers==1.0
+cycler==0.12.1
+dasbus==1.7
+dbus-python==1.3.2
+dbus_next==0.2.3
+decorator==5.1.1
+distro==1.9.0
+Django==5.1.4
+django-cleanup==6.0.0
+django-froala-editor==4.0.14
+dnf==4.23.0
+fedora-third-party==0.10
+fernet==1.0.1
+file-magic==0.4.0
 Flask==3.1.1
 flask-cors==6.0.0
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
+fonttools==4.56.0
+fros==1.1
 greenlet==3.2.3
+gunicorn==23.0.0
+humanize==4.12.0
+idna==3.10
+iso639==0.1.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+langtable==0.0.68
+libcomps==0.1.21
+libdnf==0.74.0
+louis==3.33.0
+lxml==5.3.2
+Mako==1.2.3
+Markdown==3.7
 MarkupSafe==3.0.2
+matplotlib==3.10.1
+mercurial==6.9.5
+nftables==0.1
+np==1.0.2
+numpy==2.2.4
+olefile==0.47
+packaging==24.2
+Paste==3.10.1
+perf==0.1
+pexpect==4.9.0
+pid==2.2.3
+pillow==11.1.0
+ply==3.11
+productmd==1.45
+psutil==6.1.1
+ptyprocess==0.7.0
+pwquality==1.4.5
+pyaes==1.6.1
+pyasn1==0.6.1
+pycairo==1.25.1
+pycparser==2.20
+pycrypto==2.6.1
+pycryptodome==3.20.0
+pycups==2.0.4
+PyGObject==3.50.0
+pyinotify==0.9.6
 PyJWT==2.10.1
+pykickstart==3.62
+pyOpenSSL==25.0.0
+pyparsing==3.2.3
+pyparted==3.13.0
+PySocks==1.7.1
+pyte==0.8.2
+python-augeas==1.1.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-linux-procfs==0.7.3
+python-meh==0.52
+python-pam==2.0.2
+pyudev==0.24.3
+PyYAML==6.0.2
+pyynl @ file:///builddir/build/BUILD/kernel-6.14.9-build/kernel-6.14.9/linux-6.14.9-300.fc42.x86_64/tools/net/ynl
+razorpay==1.4.2
+referencing==0.36.2
+requests==2.32.3
+requests-file==2.0.0
+requests-ftp==0.3.1
+rpds-py==0.25.0
+rpm==4.20.1
+s3transfer==0.13.0
+selinux @ file:///builddir/build/BUILD/libselinux-3.8-build/libselinux-3.8/src
+sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.8-build/selinux-3.8/python/sepolicy
+setools==4.5.1
+setuptools==74.1.3
+shtab==1.7.1
+simpleline==1.9.0
+six==1.17.0
+sos==4.9.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
+sqlparse==0.5.3
+systemd-python==235
+Tempita==0.5.2
+termcolor==2.5.0
+thefuck==3.32
+tldr==3.4.0
 typing_extensions==4.14.0
+ufw==0.35
+urllib3==2.3.0
+uv==0.5.8
+wcwidth==0.2.13
 Werkzeug==3.1.3
+xkbregistry==0.3
